RESOLVED FIXED85386
WebWindowFadeAnimation ignores "duration" parameter.
https://bugs.webkit.org/show_bug.cgi?id=85386
Summary WebWindowFadeAnimation ignores "duration" parameter.
Jer Noble
Reported 2012-05-02 10:32:49 PDT
WebWindowFadeAnimation ignores "duration" parameter.
Attachments
Patch (1.60 KB, patch)
2012-05-02 10:36 PDT, Jer Noble
beidson: review+
Jer Noble
Comment 1 2012-05-02 10:36:17 PDT
Jer Noble
Comment 2 2012-05-02 10:40:25 PDT
Jer Noble
Comment 3 2012-05-02 10:41:53 PDT
Note You need to log in before you can comment on or make changes to this bug.