WebWindowFadeAnimation ignores "duration" parameter. https://bugs.webkit.org/show_bug.cgi?id=85386

Reviewed by Brady Eidson.

Ignoring the "duration" parameter causes the full screen fade and scale animations
to get out of sync.

* platform/mac/WebWindowAnimation.mm:
(-[WebWindowFadeAnimation initWithDuration:window:initialAlpha:finalAlpha:]):

Canonical link: https://commits.webkit.org/102929@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@115847 268f45cc-cd09-0410-ab3c-d52691b4dbfc